# LU-Decomposition

./: LU.upc  LU_serial.c  LUlarge.upc  LUmedium.upc  LUsmall.upc  Makefile  a.out  entrada.txt  large-1.txt  large-2.txt  large-3.txt  large-4.txt  lu  lularge  lumedium  lusmall  matriz-large-1.txt  matriz-large-2.txt  matriz-large-3.txt  matriz-large-4.txt  matriz-medium-1.txt  matriz-medium-2.txt  matriz-medium-3.txt  matriz-medium-4.txt  matriz-small-1.txt  matriz-small-2.txt  matriz-small-3.txt  matriz-small-4.txt  medium-1.txt  medium-2.txt  medium-3.txt  medium-4.txt  run.sh  saida-large-1.txt  saida-large-2.txt  saida-large-3.txt  saida-large-4.txt  saida-medium-1.txt  saida-medium-2.txt  saida-medium-3.txt  (+13 more)
berkeley_upc-2020.4.0/: Bootstrap  ChangeLog  INSTALL.TXT  LICENSE.TXT  Makefile  Makefile.am  Makefile.in  Makefile.multiconf  README  acconfig.h  acinclude.m4  aclocal.m4  bupc_extern.h  config.env  configure  configure.in  gcc_as_cc.pl  multiconf.conf  multiconf.conf.in  multiconf.pl  multiconf_cupc.conf.in  multiconf_cupc2c.conf.in  multiconf_gupc.conf.in  unBootstrap  upc_shared.ld  upcc  upcc.conf.in  upcc.mak.in  upcr.h  upcr.mak.in  upcr_alloc.c  upcr_alloc.h  upcr_atomic.c  upcr_atomic.h  upcr_barrier.c  upcr_broadcast.c  upcr_coll_init.c  upcr_coll_templates.c  upcr_collective.c  upcr_collective.h  (+27 more)
berkeley_upc-2020.4.0/config-aux/: Makefile.in
berkeley_upc-2020.4.0/contrib/: Makefile.in  cupc2c-install.sh  tcsh-completions
berkeley_upc-2020.4.0/contrib/upcc_CGI/: Makefile.in
berkeley_upc-2020.4.0/contrib/upcdecl/: Makefile.in  upcdecl.extraman
berkeley_upc-2020.4.0/dbg/: CTestBottom.mak  CTestTop.mak  Makefile  config.cache  config.status  libupcr-ibv-par.ct  libupcr-ibv-seq.ct  libupcr-mpi-par.ct  libupcr-mpi-seq.ct  libupcr-smp-par.ct  libupcr-smp-seq.ct  libupcr-udp-par.ct  libupcr-udp-seq.ct  upcc  upcc.conf  upcc.mak  upcc.pl  upcr.mak  upcr_config.h  upcrun.conf  upcrun.pl
berkeley_upc-2020.4.0/dbg/.subst_text/: UPCR_INCLUDE_NEXT_CTYPE_H  UPCR_INCLUDE_NEXT_FENV_H  UPCR_INCLUDE_NEXT_ISO646_H  UPCR_INCLUDE_NEXT_STDBOOL_H  UPCR_INCLUDE_NEXT_STDDEF_H  UPCR_INCLUDE_NEXT_STDINT_H  UPCR_INCLUDE_NEXT_STDLIB_H  UPCR_INCLUDE_NEXT_STRING_H  UPCR_INCLUDE_NEXT_TIME_H
berkeley_upc-2020.4.0/dbg/config-aux/: Makefile
berkeley_upc-2020.4.0/dbg/contrib/: Makefile
berkeley_upc-2020.4.0/dbg/detect-upc/: Makefile  detect-upc
berkeley_upc-2020.4.0/dbg/docs/: Makefile
berkeley_upc-2020.4.0/dbg/gasnet/: Makefile  config.cache  config.status  gasnet_config.h  gasnet_tools-par.mak  gasnet_tools-par.pc  gasnet_tools-seq.mak  gasnet_tools-seq.pc
berkeley_upc-2020.4.0/dbg/harness/: Makefile  compiler.spec  cupc-upcr.spec  cupc2c.spec  gupc-upcr.spec  harness
berkeley_upc-2020.4.0/dbg/man/: Makefile  upc_trace.1  upcdecl.1  upcrun.1
berkeley_upc-2020.4.0/dbg/profile/: Makefile
berkeley_upc-2020.4.0/dbg/umalloc/: Makefile
berkeley_upc-2020.4.0/dbg/upcr_extinclude/: Makefile
berkeley_upc-2020.4.0/dbg/upcr_geninclude/: Makefile  byteswap.h  fenv.h  limits.h  math.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h
berkeley_upc-2020.4.0/dbg/upcr_geninclude2/: Makefile
berkeley_upc-2020.4.0/dbg/upcr_postinclude/: Makefile
berkeley_upc-2020.4.0/dbg/upcr_preinclude/: Makefile
berkeley_upc-2020.4.0/detect-upc/: Makefile.am  Makefile.in  scanner.c
berkeley_upc-2020.4.0/docs/: Makefile.am  Makefile.in  README.crosscompile
berkeley_upc-2020.4.0/docs/html/: index.html
berkeley_upc-2020.4.0/gasnet/: Makefile.in
berkeley_upc-2020.4.0/gasnet/aries-conduit/: Makefile.in
berkeley_upc-2020.4.0/gasnet/config-aux/: Makefile.in
berkeley_upc-2020.4.0/gasnet/ibv-conduit/: Makefile.in
berkeley_upc-2020.4.0/gasnet/mpi-conduit/: Makefile.in
berkeley_upc-2020.4.0/gasnet/ofi-conduit/: Makefile.in
berkeley_upc-2020.4.0/gasnet/other/: Makefile.in
berkeley_upc-2020.4.0/gasnet/smp-conduit/: Makefile.in
berkeley_upc-2020.4.0/gasnet/ucx-conduit/: Makefile.in
berkeley_upc-2020.4.0/gasnet/udp-conduit/: Makefile.in
berkeley_upc-2020.4.0/harness/: Makefile.in  README  checkfail.in  compiler.spec.in  cray-upc.spec  cupc-upcr.spec.in  cupc.spec  cupc2c.spec.in  gupc-upcr.spec.in  gupc.spec  harness.pl  hp-upc.spec  ibm-upc.spec  runjobs.pl  sgi-upc.spec
berkeley_upc-2020.4.0/harness/contrib/: cqrun  harness-incomplete.sh  harness-retest.pl  harness-stats.sh  harness-times.pl  platform_info.sh
berkeley_upc-2020.4.0/harness/sysconfs/: bluebiou  cori  cori-gpu  cori-knl  daint-gpu  edison  jlse-gomez  jlse-it  jlse-knl  jlse-mustang  jlse-thing  pcp-i-ssh  smp-interactive  smp-interactive-no-pthreads  summit  summitdev  theta  thor  titan  veas-cobalt  wombat
berkeley_upc-2020.4.0/man/: Makefile.in  upc_trace.extraman  upcc.extraman  upcrun.extraman
berkeley_upc-2020.4.0/opt/: CTestTop.mak  Makefile  config.cache  config.status  libupcr-ibv-par-test  libupcr-ibv-par.ct  libupcr-ibv-seq-test  libupcr-ibv-seq.ct  libupcr-mpi-par-test  libupcr-mpi-par.ct  libupcr-mpi-seq-test  libupcr-mpi-seq.ct  libupcr-smp-par-test  libupcr-smp-par.ct  libupcr-smp-seq-test  libupcr-smp-seq.ct  libupcr-udp-par-test  libupcr-udp-par.ct  libupcr-udp-seq-test  libupcr-udp-seq.ct  stamp-h1  upc_trace  upcc.conf  upcc.mak  upcr.mak  upcr_config.h  upcrun.conf
berkeley_upc-2020.4.0/opt/.subst_text/: UPCR_INCLUDE_NEXT_ALLOCA_H  UPCR_INCLUDE_NEXT_BITS_FLOATN_H  UPCR_INCLUDE_NEXT_BYTESWAP_H  UPCR_INCLUDE_NEXT_INTTYPES_H  (+5 more)
berkeley_upc-2020.4.0/profile/: Makefile.in
berkeley_upc-2020.4.0/umalloc/: Makefile.am  Makefile.in  umprivate.h
berkeley_upc-2020.4.0/upc-tests/: README
berkeley_upc-2020.4.0/upcr_extinclude/: Makefile.am  Makefile.in
berkeley_upc-2020.4.0/upcr_geninclude/: Makefile.am  Makefile.in  stdarg.h.in  stdint.h.in  stdio.h.in
berkeley_upc-2020.4.0/upcr_geninclude2/: Makefile.am  Makefile.in
berkeley_upc-2020.4.0/upcr_postinclude/: Makefile.am  Makefile.in
berkeley_upc-2020.4.0/upcr_preinclude/: Makefile.am  Makefile.in  bupc_extensions.h  upc_atomic.h  upc_castable.h  upc_castable_bits.h  upc_collective.h  upc_collective_bits.h  upc_nb.h  upc_types.h
(+323 files in other folders)
